2005-05-23  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: update for new icon location
	and run update-icon-cache at the appropriate
	times.

2005-05-23  Mark McLoughlin  <markmc@redhat.com>

	Make the window icon work.

	* admin-tool/Makefile.am: install the icon in
	$(datadir)/icons/hicolor/48x48/apps
	
	* admin-tool/profilesdialog.py,
	  admin-tool/usersdialog.py: set the icon name
	on the users and profiles windows.

Thu May 19 13:52:09 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* doc/config.html doc/format.html doc/site.xsl doc/*.html: added
	  documentation for the config and profile formats, updated the
	  stylesheet and regenerated the docs.

2005-05-19  Mark McLoughlin  <markmc@redhat.com>

	Based on a patch from  Sebastien Bacher <seb128@debian.org>
	in bug #304696

	* admin-tool/usersdialog.py: pw_gecos is a comma separated
	list of values - split it an use the first value as the
	user's name. If that's not set, just use the username as the
	user's name.

2005-05-19  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: sync changes back from Fedora Extras.

2005-05-18  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: post-release bump to 0.19.

==================== 0.18 ====================

2005-05-18  Mark McLoughlin  <markmc@redhat.com>

	* configure.in: Version 0.18.
	
2005-05-18  Mark McLoughlin  <markmc@redhat.com>

	* lib/cache.py: not everyone want's to use DV's homedir :-)

Wed May 18 16:33:34 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* lib/userdb.py lib/cache.py: add XInclude support when parsing
	  the user DB database to be able to build it from various web
	  fragments. MAke sure the cache is used for all those potential
	  web requests. Now the user as well as the profiles can be defined
	  in a centralized place.

2005-05-17  Mark McLoughlin  <markmc@redhat.com>

	* lib/unittests.py: add cache

Tue May 17 17:49:48 CEST 2005 Daniel Veillard <veillard@redhat.com>
