@@ -20,7 +20,8 @@
     <h3>More documentation</h3>
     <p> Contributed documentation is welcome: </p>
     <ul class="left">
-      <li>Documentation <a href="http://rd.cri74.org/index.php?2005/05/10/11-documentation-sur-sabayon">in French</a> by Philippe Tonguet.</li>
+      <li>Documentation <a href="http://rd.cri74.org/index.php?2005/05/10/11-documentation-sur-sabayon">in French</a> and
+      <a href="http://www.rd.cri74.org/repository/gnome/doc_sabayon_v2_english.pdf">English</a> by Philippe Tonguet.</li>
     </ul>
     <h2>
       <a name="helping">Helping with Sabayon</a>
