@@ -1,3 +1,8 @@
+Fri Jun  3 15:06:31 CEST 2005 Daniel Veillard <veillard@redhat.com>
+
+	* doc/flat.html doc/index.html: added link to the english version
+	  of Philippe Tonguet's docs.
+
 2005-05-23  Mark McLoughlin  <markmc@redhat.com>
 
 	* sabayon.spec.in: update for new icon location
